1998-04-09  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c, cvs.h (link_file): Remove; no longer used.

1998-04-08  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* recurse.c (do_dir_proc): Restore update_dir rather than a
	computation which appears to, but does not necessarily, restore it
	(reported by various people; this fix is from Greg Hudson).
	* sanity.sh (importc): New test, tests for this fix.

1998-03-27  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_lock): If the revision is already locked, give an
	error rather than dumping core.
	* sanity.sh (reserved): New test reserved-13c tests for this.

1998-03-25  Loren J. Rittle

	* import.c (add_rev): Rewrite to use RCS_FLAGS_KEEPFILE option
	of RCS_checkin() to avoid damage to imported files instead of
	externally undoing damage after the fact.  The side effect is
	that callers of add_rev() may now incrementally walk the
	entries of the current directory without seeing gratuitous
	changes to the directory structure (under at least one file
	system under at least one OS).

1998-03-18  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* error.c (error): Save and restore errno.  Should fix test case
	conflicts3-23 on SCO 5.0.2.  Reported by Steve Cameron.

	* sanity.sh (admin): Rename admin-26-o* to admin-26-*; the "o"
	stands for "cvs admin -o".  Add comment about length of tests.
	Use ${PLUS}.

1998-03-05  Dan Wilder <dan@gasboy.com>
 
 	* Fix problem with cvs admin in which -ntag:branch 
 	option associated tag with the branch's head revision.  
 	Should have used branch number.  Entailed in this fix, 
 	the following.
 
 	* Add new functions "RCS_exist_rev", "RCS_exist_tag",
 	"RCS_tag2rev", and "RCS_valid_rev" to rcs.c.  RCS_tag2rev
 	is similar to RCS_gettag, but does less interpretation.
 
 	* Plug a small memory leak.

 	* Add tests admin-26 through admin-29 to sanity.sh,
 	to test "cvs admin -n".
        
1998-03-17  Samuel Tardieu  <sam@inf.enst.fr>
