@@ -1,3 +1,9 @@
+1998-04-10  Jim Kingdon  <kingdon@harvey.cyclic.com>
+
+	* sanity.sh (rcs2): New test, tests for various Y2K cases.
+	* rcs.c (getdelta): Value for "state" keyword is optional (bug
+	discovered incidentally in writing rcs2 test).
+
 1998-04-09  Jim Kingdon  <kingdon@harvey.cyclic.com>
 
 	* filesubr.c, cvs.h (link_file): Remove; no longer used.
